tests/invalid/import_module_class_wrong_arg_count/main.py
import provider

m = provider.Model()
